--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,64 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/__manifest.json",
+              "src/service-worker.js",
+              {
+                "glob": "**/*.svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "output": "./svg"
+              }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
+              "node_modules/owl.carousel/dist/assets/owl.theme.default.css",
+              {
+                "input": "node_modules/@ionic/angular/css/core.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/normalize.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/structure.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/typography.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/display.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/padding.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/float-elements.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/text-alignment.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/text-transformation.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/flex-utils.css"
+              },
+              {
+                "input": "src/theme/variables.css"
+              }
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/lib/jquery-3.4.1.min.js",
+              "src/assets/js/lib/popper.min.js",
+              "src/assets/js/lib/bootstrap.min.js",
+              "src/assets/js/plugins/jquery-circle-progress/circle-progress.min.js",
+              "src/assets/js/plugins/jquery-countdown/jquery.countdown.min.js",
+              "src/assets/js/plugins/owl-carousel/owl.carousel.min.js",
+              "src/assets/js/base.js",
+              "service-worker.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -91,12 +143,41 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*.svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "output": "./svg"
+              }
             ],
             "styles": [
               "src/styles.css"
             ],
             "scripts": []
+          }
+        },
+        "ionic-cordova-serve": {
+          "builder": "@ionic/angular-toolkit:cordova-serve",
+          "options": {
+            "cordovaBuildTarget": "Naber-v1:ionic-cordova-build",
+            "devServerTarget": "Naber-v1:serve"
+          },
+          "configurations": {
+            "production": {
+              "cordovaBuildTarget": "Naber-v1:ionic-cordova-build:production",
+              "devServerTarget": "Naber-v1:serve:production"
+            }
+          }
+        },
+        "ionic-cordova-build": {
+          "builder": "@ionic/angular-toolkit:cordova-build",
+          "options": {
+            "browserTarget": "Naber-v1:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "Naber-v1:build:production"
+            }
           }
         }
       }
