--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               "src/favicon.ico",
               "src/assets",
               "src/__manifest.json",
-              "src/service-worker.js",
+              "src/assets/service-worker.js",
               {
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
@@ -73,14 +73,15 @@
               }
             ],
             "scripts": [
+              "src/assets/service-worker.js",
               "src/assets/js/lib/jquery-3.4.1.min.js",
               "src/assets/js/lib/popper.min.js",
               "src/assets/js/lib/bootstrap.min.js",
               "src/assets/js/plugins/jquery-circle-progress/circle-progress.min.js",
               "src/assets/js/plugins/jquery-countdown/jquery.countdown.min.js",
               "src/assets/js/plugins/owl-carousel/owl.carousel.min.js",
-              "src/assets/js/base.js",
-              "service-worker.js"
+              "src/assets/js/base.js"
+
             ]
           },
           "configurations": {
