--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ionic/angular": "^6.1.11",
     "bootstrap": "^5.1.3",
     "ionicons": "^4.2.4",
+    "jquery": "^3.6.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "^14.0.0",
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
+    "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
@@ -37,7 +39,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2",
-    "@ionic/angular-toolkit": "latest"
+    "typescript": "~4.7.2"
   }
 }
