--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               "src/favicon.ico",
               "src/assets",
               "src/__manifest.json",
-              "src/assets/service-worker.js",
+              "src/service-worker.js",
               {
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
@@ -35,9 +35,10 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
-              "node_modules/owl.carousel/dist/assets/owl.theme.default.css",
+              "src/assets/css/style.css",
+              "src/assets/css/inc/bootstrap/bootstrap.min.css",
+              "src/assets/css/inc/owl-carousel/owl.carousel.min.css",
+              "src/assets/css/inc/owl-carousel/owl.theme.default.css",
               {
                 "input": "node_modules/@ionic/angular/css/core.css"
               },
@@ -73,14 +74,14 @@
               }
             ],
             "scripts": [
-              "src/assets/service-worker.js",
               "src/assets/js/lib/jquery-3.4.1.min.js",
               "src/assets/js/lib/popper.min.js",
               "src/assets/js/lib/bootstrap.min.js",
               "src/assets/js/plugins/jquery-circle-progress/circle-progress.min.js",
               "src/assets/js/plugins/jquery-countdown/jquery.countdown.min.js",
               "src/assets/js/plugins/owl-carousel/owl.carousel.min.js",
-              "src/assets/js/base.js"
+              "src/assets/js/base.js",
+              "src/service-worker.js"
 
             ]
           },
